--- a/views/index.jade
+++ b/views/index.jade
@@ -9,5 +9,6 @@ block content
   textarea(id='result' rows='10' cols='100') {"seckey":"","data":[{"userId":"zs","password":"zs"}]}
  input( type='button' onclick="send()" value='send')
  p 消息体报文例子
+ p URL : /videoMonitor/deviceInfo  JSON: {"seckey":"","data":[{"deviceId":"","deviceName":"","deviceProducter":"","deviceType":"","position":""}]}
  #message 消息内容<br/>
 
