--- a/views/index.jade
+++ b/views/index.jade
@@ -10,5 +10,6 @@ block content
  input( type='button' onclick="send()" value='send')
  p 消息体报文例子
  p URL : /videoMonitor/deviceInfo  JSON: {"seckey":"","data":[{"deviceId":"","deviceName":"","deviceProducter":"","deviceType":"","position":""}]}
+ p URL : /systemInfo/statusinfo  JSON: {"seckey":"","data":[{"systemId":"100","status":"0"}]}
  #message 消息内容<br/>
 
