--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype transitional
 html
   head
-    title= title
+    title!=  title
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='/javascripts/jquery-1.11.3.min.js')
     script(type='text/javascript').
