新增合并关键字段为id

--- a/views/index.jade
+++ b/views/index.jade
@@ -203,7 +203,7 @@ block content
   strong
    font(color='brown') 广播通讯的分区信息:
   font(color='green')
-   | id:记录唯一id(分区Id),systemId:系统id(后台社区系统列表获取),status:是否在线0否，1是
+   | id:分区Id,systemId:系统id(后台社区系统列表获取),status:是否在线0否，1是
   p
     | URL : /broadcast/area
     br
